# analysis_method-C

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  available_expression.cpp  cmake_install.cmake  output_program
dataFlow_Analysis/Live_Variables/: CMakeCache.txt  CMakeLists.txt  Live_Variables  Makefile  cmake_install.cmake  livenessAnalysis.cpp  output  setBB.cpp
dataFlow_Analysis/available_expr/: CMakeLists.txt  Makefile  available_expression  available_expression.cpp  cmake_install.cmake  test.txt
include/: MyIRReader.hpp  readFile.cpp
inputFiles/: test.cpp  test.ll
poniter_analysis/: test.txt
poniter_analysis/pointer_Analysis/: jimple_output.txt  pom.xml
poniter_analysis/pointer_Analysis/src/main/java/org/example/: DirectoryPrinter.java  Main.java  PA.java  Pointer.java  test.java
src/: CMakeLists.txt  Makefile  cmake_install.cmake  readFile.cpp
test/: test.bc  test.cpp  test.ll
